--- a/remote_Job/template/footer.html
+++ b/remote_Job/template/footer.html
@@ -7,40 +7,34 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-6 col-md-3 mb-4 mb-md-0">
-            <h3>Category</h3>
+            <h3>Links</h3>
             <ul class="list-unstyled">
-              <li><a href="#">Web Design</a></li>
-              <li><a href="#">Graphic Design</a></li>
-              <li><a href="#">Web Developers</a></li>
-              <li><a href="#">Python</a></li>
-              <li><a href="#">HTML5</a></li>
-              <li><a href="#">CSS3</a></li>
+              <li><a href="https://roadmap.sh/frontend">Front-end Roadmap</a></li>
+              <li><a href="https://www.python.org/">Learn Python</a></li>
+              <li><a href="https://html.com/html5/">Learn HTML5</a></li>
+              <li><a href="https://www.tutorialrepublic.com/css-tutorial/">Learn CSS3</a></li>
             </ul>
           </div>
           <div class="col-6 col-md-3 mb-4 mb-md-0">
             <h3>Company</h3>
             <ul class="list-unstyled">
               <li><a href="#">About Us</a></li>
-              <li><a href="#">Career</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Resources</a></li>
+              <li><a href="http://127.0.0.1:8000/jobs/">Jobs</a></li>
             </ul>
           </div>
           <div class="col-6 col-md-3 mb-4 mb-md-0">
             <h3>Support</h3>
             <ul class="list-unstyled">
-              <li><a href="#">Support</a></li>
-              <li><a href="#">Privacy</a></li>
               <li><a href="#">Terms of Service</a></li>
             </ul>
           </div>
           <div class="col-6 col-md-3 mb-4 mb-md-0">
             <h3>Contact Us</h3>
             <div class="footer-social">
-              <a href="#"><span class="icon-facebook"></span></a>
-              <a href="#"><span class="icon-twitter"></span></a>
-              <a href="#"><span class="icon-instagram"></span></a>
-              <a href="#"><span class="icon-linkedin"></span></a>
+              <a href="https://www.facebook.com/unique.biwas.7/"><span class="icon-facebook"></span></a>
+              <a href="https://twitter.com/BiwasUnique"><span class="icon-twitter"></span></a>
+              <a href="https://www.instagram.com/unique_biwas/"><span class="icon-instagram"></span></a>
+              <a href="https://www.linkedin.com/in/biwas-pudasaini-191435216/"><span class="icon-linkedin"></span></a>
             </div>
           </div>
         </div>
@@ -48,8 +42,8 @@
         <div class="row text-center">
           <div class="col-12">
             <p class="copyright"><small>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy; <a>
+
+              Copyright &copy; <a>
               <script type="text/JavaScript">
                 document.write(new Date().getFullYear());</script> Unique Biwas
                 
