Contact us and about us edited

--- a/remote_Job/template/jobapp/dashboard.html
+++ b/remote_Job/template/jobapp/dashboard.html
@@ -116,7 +116,7 @@
                             <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Bookmarked Job</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Aplied Job</a>
+                            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Applied Job</a>
                         </li>
                       </ul>
                       <div class="tab-content" id="myTabContent">
@@ -150,7 +150,7 @@
                             {% endif %}
                         </div>
                         <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                            <h5 class="card-header text-center">Aplied Posts</h5>
+                            <h5 class="card-header text-center">Applied Posts</h5>
                             {% if appliedjobs %}
                             <table class="table text-center mt-5">
                                 <thead class="thead-dark">
