--- a/remote_Job/template/footer.html
+++ b/remote_Job/template/footer.html
@@ -18,8 +18,8 @@
           <div class="col-6 col-md-3 mb-4 mb-md-0">
             <h3>Company</h3>
             <ul class="list-unstyled">
-              <li><a href="#">About Us</a></li>
-              <li><a href="http://127.0.0.1:8000/jobs/">Jobs</a></li>
+              <li><a href="{% url 'jobapp:about_us' %}">About Us</a></li>
+              <li><a href="{% url 'jobapp:job-list' %}">Jobs</a></li>
             </ul>
           </div>
           <div class="col-6 col-md-3 mb-4 mb-md-0">
