--- a/remote_Job/template/header.html
+++ b/remote_Job/template/header.html
@@ -26,9 +26,9 @@
         <nav class="mx-auto site-navigation">
           <ul class="site-menu js-clone-nav d-none d-xl-block ml-0 pl-0">
             <li><a href="{% url 'jobapp:home' %}" class="nav-link">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="{% url 'jobapp:about_us' %}">About</a></li>
             <li><a href="{% url 'jobapp:job-list' %}">Job Listings</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="{% url 'jobapp:contact_us' %}">Contact</a></li>
           </ul>
         </nav>
         <div class="right-cta-menu text-right d-flex aligin-items-center col-6">
