--- a/remote_Job/template/jobapp/about_us.html
+++ b/remote_Job/template/jobapp/about_us.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <section class="home-section section-hero inner-page overlay bg-image"
-      style="background-image: url('{% static 'images/hero_1.jpg' %}');" id="home-section">
+      style="background-image: url('{% static 'images/bgrr.jpg' %}');" id="home-section">
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-md-12">
@@ -23,13 +23,13 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 mb-5 mb-lg-0">
-            <a data-fancybox data-ratio="2" href="https://vimeo.com/317571768" class="block__96788">
+            <a data-fancybox data-ratio="2" href="https://www.youtube.com/watch?v=5qndnyWzDzU&pp=ygUQcmVtb3RlIGpvYiBpbnRvcg%3D%3D" class="block__96788">
               <span class="play-icon"><span class="icon-play"></span></span>
-              <img src="{% static 'images/about_1.jpg' %}" alt="Image" class="img-fluid img-shadow">
+              <img src="{% static 'images/remotejobimage.jpg' %}" alt="Image" class="img-fluid img-shadow">
             </a>
           </div>
           <div class="col-lg-5 ml-auto">
-            <h2 class="section-title mb-3">Careers for Your Careers</h2>
+            <h2 class="section-title mb-3">Job Finder for Your Careers</h2>
             <p class="lead">Eveniet voluptatibus voluptates suscipit minima, cum voluptatum ut dolor, sed facere corporis
               qui, ea quisquam quis odit minus nulla vitae. Sit, voluptatem.</p>
             <p>Ipsum harum assumenda in eum vel eveniet numquam, cumque vero vitae enim cupiditate deserunt eligendi officia
@@ -51,36 +51,34 @@
         <div class="row align-items-center block__69944">
 
           <div class="col-md-6">
-            <img src="{% static 'images/person_2.jpg' %}" alt="Image" class="img-fluid mb-4 rounded">
+            <img src="{% static 'images/bhanu.jpg' %}" alt="Image" class="img-fluid mb-4 rounded">
 
-            <h3>John Smith</h3>
-            <p class="text-muted">Creative Director</p>
+            <h3>Bhanu Aryal</h3>
+            <p class="text-muted">Product Owner</p>
             <p>Soluta quasi cum delectus eum facilis recusandae nesciunt molestias accusantium libero dolores repellat id in
               dolorem laborum ad modi qui at quas dolorum voluptatem voluptatum repudiandae voluptatibus ut? Ex vel ad
               explicabo iure ipsa possimus consectetur neque rem molestiae eligendi velit?.</p>
             <div class="social mt-4">
-              <a href="#"><span class="icon-facebook"></span></a>
-              <a href="#"><span class="icon-twitter"></span></a>
-              <a href="#"><span class="icon-instagram"></span></a>
-              <a href="#"><span class="icon-linkedin"></span></a>
+              <a href="https://www.facebook.com/profile.php?id=100075600817337"><span class="icon-facebook"></span></a>
+              <a href="https://www.instagram.com/iambhanuaryal/"><span class="icon-instagram"></span></a>
+              <a href="https://www.linkedin.com/in/bhanuaryal/"><span class="icon-linkedin"></span></a>
             </div>
           </div>
 
 
           <div class="col-md-6 order-md-2">
-            <img src="{% static 'images/person_1.jpg' %}" alt="Image" class="img-fluid mb-4 rounded">
+            <img src="{% static 'images/skr.jpg' %}" alt="Image" class="img-fluid mb-4 rounded">
 
 
-            <h3>Drew Anderson</h3>
-            <p class="text-muted">Creative Director</p>
+            <h3>Sakar Gautam</h3>
+            <p class="text-muted">Client</p>
             <p>Soluta quasi cum delectus eum facilis recusandae nesciunt molestias accusantium libero dolores repellat id in
               dolorem laborum ad modi qui at quas dolorum voluptatem voluptatum repudiandae voluptatibus ut? Ex vel ad
               explicabo iure ipsa possimus consectetur neque rem molestiae eligendi velit?.</p>
             <div class="social mt-4">
-              <a href="#"><span class="icon-facebook"></span></a>
-              <a href="#"><span class="icon-twitter"></span></a>
-              <a href="#"><span class="icon-instagram"></span></a>
-              <a href="#"><span class="icon-linkedin"></span></a>
+              <a href="https://www.facebook.com/gautamneal"><span class="icon-facebook"></span></a>
+              <a href="https://www.instagram.com/skr_gtm/"><span class="icon-instagram"></span></a>
+              <a href="https://www.linkedin.com/in/sakar-gautam-bbab1a215/"><span class="icon-linkedin"></span></a>
             </div>
           </div>
 
@@ -91,7 +89,7 @@
 
 
     <section class="py-5 bg-image overlay-primary fixed overlay" id="next-section"
-      style="background-image: url('images/hero_1.jpg');">
+      style="background-image: url('images/bgrr.jpg');">
       <div class="container">
         <div class="row mb-5 justify-content-center">
           <div class="col-md-7 text-center">
@@ -104,28 +102,28 @@
 
           <div class="col-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
             <div class="d-flex align-items-center justify-content-center mb-2">
-              <strong class="number" data-number="1930">0</strong>
+              <strong class="number" data-number="2539">0</strong>
             </div>
             <span class="caption">Candidates</span>
           </div>
 
           <div class="col-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
             <div class="d-flex align-items-center justify-content-center mb-2">
-              <strong class="number" data-number="54">0</strong>
+              <strong class="number" data-number="67">0</strong>
             </div>
             <span class="caption">Jobs Posted</span>
           </div>
 
           <div class="col-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
             <div class="d-flex align-items-center justify-content-center mb-2">
-              <strong class="number" data-number="120">0</strong>
+              <strong class="number" data-number="486">0</strong>
             </div>
             <span class="caption">Jobs Filled</span>
           </div>
 
           <div class="col-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
             <div class="d-flex align-items-center justify-content-center mb-2">
-              <strong class="number" data-number="550">0</strong>
+              <strong class="number" data-number="876">0</strong>
             </div>
             <span class="caption">Companies</span>
           </div>
