some pages added

--- a/remote_Job/template/jobapp/about_us.html
+++ b/remote_Job/template/jobapp/about_us.html
@@ -51,7 +51,7 @@
         <div class="row align-items-center block__69944">
 
           <div class="col-md-6">
-            <img src="{% static 'images/bhanu.jpg' %}" alt="Image" class="img-fluid mb-4 rounded">
+            <img src="{% static 'images/bhanu.jpg' %}" alt="Image" class="img-fluid mb-4 rounded" width="500" height="650">
 
             <h3>Bhanu Aryal</h3>
             <p class="text-muted">Product Owner</p>
@@ -67,18 +67,19 @@
 
 
           <div class="col-md-6 order-md-2">
-            <img src="{% static 'images/skr.jpg' %}" alt="Image" class="img-fluid mb-4 rounded">
+            <img src="{% static 'images/biwas.jpg' %}" alt="Image" class="img-fluid mb-4 rounded" width="450" height="650">
 
 
-            <h3>Sakar Gautam</h3>
-            <p class="text-muted">Client</p>
+
+            <h3>Biwas Pudasaini</h3>
+            <p class="text-muted">CEO</p>
             <p>Soluta quasi cum delectus eum facilis recusandae nesciunt molestias accusantium libero dolores repellat id in
               dolorem laborum ad modi qui at quas dolorum voluptatem voluptatum repudiandae voluptatibus ut? Ex vel ad
               explicabo iure ipsa possimus consectetur neque rem molestiae eligendi velit?.</p>
             <div class="social mt-4">
-              <a href="https://www.facebook.com/gautamneal"><span class="icon-facebook"></span></a>
-              <a href="https://www.instagram.com/skr_gtm/"><span class="icon-instagram"></span></a>
-              <a href="https://www.linkedin.com/in/sakar-gautam-bbab1a215/"><span class="icon-linkedin"></span></a>
+              <a href="https://www.facebook.com/unique.biwas.7/"><span class="icon-facebook"></span></a>
+              <a href="https://www.instagram.com/unique_biwas/"><span class="icon-instagram"></span></a>
+              <a href="https://www.linkedin.com/in/biwas-pudasaini-191435216/"><span class="icon-linkedin"></span></a>
             </div>
           </div>
 
