--- a/remote_Job/template/footer.html
+++ b/remote_Job/template/footer.html
@@ -25,7 +25,7 @@
           <div class="col-6 col-md-3 mb-4 mb-md-0">
             <h3>Support</h3>
             <ul class="list-unstyled">
-              <li><a href="#">Terms of Service</a></li>
+              <li><a href="{% url 'jobapp:terms-condition' %}">Terms and condition</a></li>
             </ul>
           </div>
           <div class="col-6 col-md-3 mb-4 mb-md-0">
