Some changes for employee signup and job manage

--- a/remote_Job/template/jobapp/terms-condition.html
+++ b/remote_Job/template/jobapp/terms-condition.html
@@ -34,9 +34,9 @@
         </div>
         <!-- Text Content Section (Middle) -->
         <div class="container">
-            <div style="text-align: justify;"> <!-- Apply text-align: justify; to the container -->
+            <div style="text-align: justify;  margin-top: 50px;"> <!-- Apply text-align: justify; to the container -->
 
-                <h2>Terms and Conditions</h2>
+                <h2 style="text-align: center;">Terms and Conditions</h2>
                 <p>Welcome to Remote Job Finder Portal. By accessing or using our services, you agree to comply with and be bound by the following terms and conditions. If you do not agree to these terms, please do not use our services.</p>
         
                 <!-- Section 1 -->
