PDF file uploaded issue and code

--- a/remote_Job/template/account/employee-registration.html
+++ b/remote_Job/template/account/employee-registration.html
@@ -42,7 +42,7 @@
         </div>
         {% endfor %}
         {% endif %}
-        <form method="POST" action="" class="p-4 border rounded">
+        <form method="POST" action="" enctype="multipart/form-data" class="p-4 border rounded" >
           {% csrf_token %}
           {% for field in form %}
           {% if field.name == 'gender' %}
