--- a/remote_Job/template/jobapp/applicant-details.html
+++ b/remote_Job/template/jobapp/applicant-details.html
@@ -22,7 +22,7 @@
     <section class="site-section block__18514" id="next-section">
       <div class="container">
         <div class="row">
-          <div class="col-lg-3 mr-auto">
+          <div class="col-lg-3">
             <div class="border p-4 rounded">
               <ul class="list-unstyled block__47528 mb-0">
                 <li><span class="active">Applicant</span></li>
@@ -32,10 +32,13 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-8">
-            <span class="text-primary d-block mb-5"><span class="icon-magnet display-1"></span></span>
+          
+          <div class="col-lg-5">
+            <span class="text-primary d-block mb-6"><span class="icon-magnet display-1"></span></span>
             <h2 class="mb-4">{{ applicant.get_full_name }}</h2>
-            <p><h3>Email :</h3>{{ applicant.email }}</p>
+            <p><h2>Email :</h2>{{ applicant.email }}</p>
+            <p><h3>Phone Number :</h3><a href="tel:+977{{ applicant.phone_number }}">+977 {{ applicant.phone_number }}</a></p>
+            
             <p><h3>Gender :</h3>
                 {% if applicant.gender == 'M' %}
                     Male
@@ -44,7 +47,23 @@
                 {% endif %}
             </p>
             <p><a href="mailto:{{ applicant.email }}" class="btn btn-primary btn-md mt-4">Contact</a></p>
+            
           </div>
+          <div class="col-lg-3">
+            <div class="border p-4 rounded">
+              
+                <h2>Resume:</h2>
+                {% if applicant.pdf_document %}
+              <a href="{{ applicant.pdf_document.url }}" target="_blank" class="btn btn-primary btn-md mt-4">Download PDF</a>
+              {% else %}
+              No PDF Available
+              {% endif %}
+          
+            
+            </div>
+          </div>
+
+          
         </div>
       </div>
     </section>
