--- a/remote_Job/template/account/login.html
+++ b/remote_Job/template/account/login.html
@@ -58,6 +58,8 @@
             <div class="col-md-12">
               <input type="submit" value="Sign In" class="btn px-4 btn-primary text-white">
             </div>
+            <a href="{% url 'password_reset' %}">Forgot Password?</a>
+
           </div>
         </form>
     </div>
