--- a/remote_Job/template/account/login.html
+++ b/remote_Job/template/account/login.html
@@ -46,20 +46,28 @@
           {% for field in form %}
           <div class="row form-group">
             <div class="col-md-12 mb-3 mb-md-0">
-              
+              {% if field.name == 'remember_me' %}
+              <div class="form-check">
+                {{ field }}
+                <label class="form-check-label" for="id_{{ field.name }}">Remember Me</label>
+              </div>
+              {% else %}
               <label class="text-black" for="id_{{ field.name }}">{{ field.label }}</label>
               <input type="{{ field.field.widget.input_type }}" class="form-control" name="{{ field.name }}"
                 id="id_{{ field.name }}" placeholder="{{ field.field.widget.attrs.placeholder }}">
+              {% endif %}
             </div>
           </div>
-
           {% endfor %}
+          <div class="text-center mt-4">
+         </div>
           <div class="row form-group">
             <div class="col-md-12">
               <input type="submit" value="Sign In" class="btn px-4 btn-primary text-white">
             </div>
           </div>
         </form>
+        
         
 
     </div>
