--- a/remote_Job/template/header.html
+++ b/remote_Job/template/header.html
@@ -45,7 +45,7 @@
                     <li class="pr-3 has-children">
                       <a>Dashboard</a> 
                       <ul class="dropdown">
-                        <li><a href="{% url 'jobapp:dashboard' %}">Dashboard</a></li>
+                        <li><a href="{% url 'jobapp:dashboard' %}">View Jobs</a></li>
                         <li><a href="{% url 'account:logout' %}">Logout</a></li>
                       </ul>
                     </li>
@@ -62,7 +62,7 @@
                 <li class="pr-3 has-children">
                   <a>Dashboard</a> 
                   <ul class="dropdown">
-                    <li><a href="{% url 'jobapp:dashboard' %}">Dashboard</a></li>
+                    <li><a href="{% url 'jobapp:dashboard' %}">JobBoard</a></li>
                     <li><a href="{% url 'account:logout' %}">Logout</a></li>
                   </ul>
                 </li>
