--- a/remote_Job/template/jobapp/applicant-details.html
+++ b/remote_Job/template/jobapp/applicant-details.html
@@ -42,13 +42,31 @@
                 Female
             {% endif %}
         </p>
-        <div class="col-lg-5">
-          <!-- Button to trigger modal with dynamic buttonType parameter -->
-          <button type="button" class="btn btn-success btn-md mt-4" data-toggle="modal" data-target="#emailPositionModal" onclick="setButtonType('select')">Select</button>
-          <button type="button" class="btn btn-danger btn-md mt-4" data-toggle="modal" data-target="#emailPositionModal" onclick="setButtonType('reject')">Reject</button>
-
-        </div>
+        <div class="d-flex">
+              <button type="button" class="btn btn-success btn-md mt-4 mr-2" data-toggle="modal" data-target="#emailPositionModal" onclick="setButtonType('select')">Select</button>
+              <button type="button" class="btn btn-danger btn-md mt-4" data-toggle="modal" data-target="#emailPositionModal" onclick="setButtonType('reject')">Reject</button>
+          </div>
       </div>
+      <div class="col-lg-3">
+        <div class="border p-4 rounded">
+            <h2>Resume:</h2>
+            {% if applicant.pdf_document %}
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <a href="{{ applicant.pdf_document.url }}" target="_blank" class="btn btn-primary btn-block">Preview PDF</a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="{{ applicant.pdf_document.url }}" download="resume.pdf" class="btn btn-success btn-block">Download PDF</a>
+                    </div>
+                </div>
+            {% else %}
+                <p>No PDF Available</p>
+            {% endif %}
+        </div>
+    </div>
+    
+    
+        
     </div>
   </section>
   
