minor changes for dropdown issue

--- a/remote_Job/template/jobapp/job_mail.html
+++ b/remote_Job/template/jobapp/job_mail.html
@@ -124,16 +124,7 @@
                                                                     <tr>
                                                                         <td class="alignment"
                                                                             style="text-align:center;font-size:0px;">
-                                                                            <div class="menu-links">
-                                                                                <!--[if mso]><table role="presentation" border="0" cellpadding="0" cellspacing="0" align="center" style=""><tr style="text-align:center;"><![endif]--><!--[if mso]><td style="padding-top:5px;padding-right:15px;padding-bottom:5px;padding-left:15px"><![endif]--><a
-                                                                                    href="homepage.html" target="_self"
-                                                                                    style="mso-hide:false;padding-top:5px;padding-bottom:5px;padding-left:15px;padding-right:15px;display:inline-block;color:#c9c9c9;font-family:Rubik, Trebuchet MS, Helvetica, sans-serif;font-size:11px;text-decoration:none;letter-spacing:normal;">VISIT
-                                                                                    WEBSITE</a><!--[if mso]></td><td><![endif]--><span
-                                                                                    class="sep"
-                                                                                    style="font-size:11px;font-family:Rubik, Trebuchet MS, Helvetica, sans-serif;color:#c9c9c9;">|</span><!--[if mso]></td><![endif]--><!--[if mso]><td style="padding-top:5px;padding-right:15px;padding-bottom:5px;padding-left:15px"><![endif]--><a
-                                                                                    href="cancel.html" target="_self"
-                                                                                    style="mso-hide:false;padding-top:5px;padding-bottom:5px;padding-left:15px;padding-right:15px;display:inline-block;color:#c9c9c9;font-family:Rubik, Trebuchet MS, Helvetica, sans-serif;font-size:11px;text-decoration:none;letter-spacing:normal;">UNSUBSCRIBE</a><!--[if mso]></td><![endif]--><!--[if mso]></tr></table><![endif]-->
-                                                                            </div>
+                                                                            Remote Job Finder
                                                                         </td>
                                                                     </tr>
                                                                 </table>
@@ -168,8 +159,8 @@
                                                             <td class="pad"
                                                                 style="width:100%;padding-right:0px;padding-left:0px;">
                                                                 <div class="alignment" align="center"
-                                                                    style="line-height: 10px; font-size: 80px; color: whitesmoke;">
-                                                                     Job Finder</div>
+                                                                    style="line-height: 50px; font-size: 50px; color: whitesmoke;">
+                                                                     Remote Job Finder</div>
                                                             </td>
                                                         </tr>
                                                     </table>
