Error in Forgot Password..

--- a/remote_Job/template/account/change_password.html
+++ b/remote_Job/template/account/change_password.html
@@ -4,11 +4,18 @@
 {% block content %}
     <style>
         .has-error {
-            color: #a94442;  /* Red color for the border or background of the form field */
+            color: #a94442;
         }
 
         .text-danger {
-            color: #a94442;  /* Red color for the error message text */
+            color: #a94442;
+        }
+
+        input[type="text"],
+        input[type="email"],
+        input[type="password"] {
+            width: 100%; 
+        
         }
     </style>
 
@@ -43,7 +50,7 @@
                             {% endif %}
                         </div>
                     {% endfor %}
-                    <button type="submit" class="btn btn-primary">Change Password</button>
+                    <button type="submit" class="btn btn-primary mb-3">Change Password</button>
                 </form>
             </div>
         </div>
