--- a/remote_Job/template/account/password_reset_confirm.html
+++ b/remote_Job/template/account/password_reset_confirm.html
@@ -1,6 +1,46 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
-  <h2>Password Reset Successful</h2>
-  <p>Your password has been successfully reset. You can now <a href="{% url 'login' %}">log in</a> with your new password.</p>
+
+    <section class="home-section section-hero inner-page overlay bg-image"
+             style="background-image: url('{% static 'images/bgrr.jpg' %}');" id="home-section">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-12">
+                    <div class="mb-5 text-center">
+                        <h1 class="text-white font-weight-bold">Reset Your Password</h1>
+                        <p>Find your dream jobs on our powerful career website.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <h2 class="mb-4">Reset Your Password</h2>
+                {% if validlink %}
+                    <p>Please enter your new password twice:</p>
+                    <form action="." method="post">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            {{ form.new_password1.label_tag }} {{ form.new_password1 }}
+                            <p style="color: red;">{{ form.new_password1.errors }}</p>
+                        
+                            {{ form.new_password2.label_tag }} {{ form.new_password2 }}
+                            <p style="color: red;">{{ form.new_password2.errors }}</p> 
+                        </div>
+                        
+                    
+                        <p><input type="submit" class="btn btn-primary mb-3" value="Change password" /></p>
+                    </form>
+                    
+                {% else %}
+                    <p class="mb-5">The password reset link was invalid, possibly because it has
+                        already been used. Please request a new password reset.</p>
+                {% endif %}
+            </div>
+        </div>
+    </div>
 {% endblock %}
