--- a/remote_Job/template/account/password_reset_email.html
+++ b/remote_Job/template/account/password_reset_email.html
@@ -1,2 +1,13 @@
-<p>Click the following link to reset your password:</p>
-<p><a href="{{ reset_link }}">{{ reset_link }}</a></p>
+{% load i18n %}
+{% load static %}
+{% autoescape off %}
+Someone asked for password reset for email {{ email }}. Follow the link
+below:
+
+{{ protocol }}://{{ domain }}{% url 'account:password_reset_confirm' uidb64=uid token=token %}
+
+{% blocktrans %}If you didn't request a password reset, please ignore this email.{% endblocktrans %}
+
+{% endautoescape %}
+
+
