--- a/remote_Job/template/account/login.html
+++ b/remote_Job/template/account/login.html
@@ -66,6 +66,8 @@
               <input type="submit" value="Sign In" class="btn px-4 btn-primary text-white">
             </div>
           </div>
+          <p><a href="{% url "account:password_reset" %}">Forgot your password?</a></p>
+
         </form>
         
         
