--- a/remote_Job/template/account/password_reset_complete.html
+++ b/remote_Job/template/account/password_reset_complete.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <h2 class="mb-4">Password Reset</h2>
+                <h2 class="mb-4">Password Reset Complete</h2>
             
                 <p class="mb-5">Your password has been set. You can <a href="{% url "account:login" %}">Log In Now..!</a></p>
 
