--- a/remote_Job/template/account/password_reset_form.html
+++ b/remote_Job/template/account/password_reset_form.html
@@ -14,7 +14,7 @@
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-12">
                     <div class="mb-5 text-center">
-                        <h1 class="text-white font-weight-bold">Forgot Password</h1>
+                        <h1 class="text-white font-weight-bold">Forgot Your Password</h1>
                         <p>Find your dream jobs on our powerful career website.</p>
                     </div>
                 </div>
