some error in search result and job details page fixed

--- a/remote_Job/template/jobapp/job-single.html
+++ b/remote_Job/template/jobapp/job-single.html
@@ -218,10 +218,10 @@
         <div class="bg-light p-3 border rounded">
           <h3 class="text-primary  mt-3 h5 pl-3 mb-3 ">Share</h3>
           <div class="px-3">
-            <a href="#" class="pt-3 pb-3 pr-3 pl-0"><span class="icon-facebook"></span></a>
-            <a href="#" class="pt-3 pb-3 pr-3 pl-0"><span class="icon-twitter"></span></a>
-            <a href="#" class="pt-3 pb-3 pr-3 pl-0"><span class="icon-linkedin"></span></a>
-            <a href="#" class="pt-3 pb-3 pr-3 pl-0"><span class="icon-pinterest"></span></a>
+            <a href="https://www.facebook.com/unique.biwas.7/" class="pt-3 pb-3 pr-3 pl-0"><span class="icon-facebook"></span></a>
+            <a href="https://twitter.com/BiwasUnique" class="pt-3 pb-3 pr-3 pl-0"><span class="icon-twitter"></span></a>
+            <a href="https://www.linkedin.com/in/biwas-pudasaini-191435216/" class="pt-3 pb-3 pr-3 pl-0"><span class="icon-linkedin"></span></a>
+            <a href="https://www.instagram.com/unique_biwas/"" class="pt-3 pb-3 pr-3 pl-0"><span class="icon-instagram"></span></a>
           </div>
         </div>
 
