--- a/remote_Job/template/account/password_reset_form.html
+++ b/remote_Job/template/account/password_reset_form.html
@@ -31,9 +31,10 @@
             <p>Enter your e-mail address to obtain a new password.</p>
             <form action="." method="post">
                 <div class="form-group">
-                     {{ form.email.label_tag }}
-                <br>
-                    {{ form.email }}
+                    <label class="text-black"> {{ form.email.label_tag }}</label>
+                    <div class="input-group">
+                        {{ form.email }}
+                    </div>
                 </div>
         
             
