--- a/remote_Job/template/account/password_reset_complete.html
+++ b/remote_Job/template/account/password_reset_complete.html
@@ -20,7 +20,9 @@
             <div class="col-md-6">
                 <h2 class="mb-4">Password Reset Complete</h2>
             
-                <p class="mb-5">Your password has been set. You can <a href="{% url "account:login" %}">Log In Now..!</a></p>
+                <p class="mb-5">Your password has been set. You can <a href="{% url 'account:login' %}"
+                    class="js-clone-nav btn btn-primary border-width-2 d-none d-lg-inline-block ov-fix"><span
+                      class="mr-2 icon-lock_outline"></span>Log In</a>
 
             </div>
         </div>
