--- a/remote_Job/template/account/employee-registration.html
+++ b/remote_Job/template/account/employee-registration.html
@@ -25,7 +25,6 @@
         <h2 class="mb-4 text-center">Sign Up To JobBoard</h2>
         {% include 'messages.html' %}
 
-
         {% if form.errors %}
         {% for field in form %}
         {% for error in field.errors %}
@@ -42,6 +41,7 @@
         </div>
         {% endfor %}
         {% endif %}
+        
         <form method="POST" action="" enctype="multipart/form-data" class="p-4 border rounded">
           {% csrf_token %}
           {% for field in form %}
@@ -65,8 +65,20 @@
                               {{ field.label }}
                               {% if field.field.required %}<span class="text-danger">*</span>{% endif %}
                           </label>
-                          <input type="{{ field.field.widget.input_type }}" class="form-control" name="{{ field.name }}"
-                                 id="id_{{ field.name }}" placeholder="{{ field.field.widget.attrs.placeholder }}">
+                          {% if field.field.widget.input_type == 'password' %}
+                              <div class="input-group">
+                                  <input type="password" class="form-control" name="{{ field.name }}"
+                                         id="id_{{ field.name }}" placeholder="{{ field.field.widget.attrs.placeholder }}">
+                                  <div class="input-group-append">
+                                      <button type="button" class="btn btn-outline-secondary" onclick="togglePassword('id_{{ field.name }}')">
+                                          <span class="oi oi-eye"></span>
+                                      </button>
+                                  </div>
+                              </div>
+                          {% else %}
+                              <input type="{{ field.field.widget.input_type }}" class="form-control" name="{{ field.name }}"
+                                     id="id_{{ field.name }}" placeholder="{{ field.field.widget.attrs.placeholder }}">
+                          {% endif %}
                       </div>
                   </div>
               {% endif %}
@@ -82,5 +94,16 @@
     </div>
   </div>
 </section>
+
+<script>
+    function togglePassword(inputId) {
+        var passwordInput = document.getElementById(inputId);
+        if (passwordInput.type === "password") {
+            passwordInput.type = "text";
+        } else {
+            passwordInput.type = "password";
+        }
+    }
+</script>
 
 {% endblock %}
