--- a/remote_Job/template/account/employer-registration.html
+++ b/remote_Job/template/account/employer-registration.html
@@ -41,6 +41,7 @@
         </div>
         {% endfor %}
         {% endif %}
+        
         <form method="POST" action="" enctype="multipart/form-data" class="p-4 border rounded">
           {% csrf_token %}
           {% for field in form %}
@@ -50,8 +51,20 @@
                           {{ field.label }}
                           {% if field.field.required %}<span class="text-danger">*</span>{% endif %}
                       </label>
-                      <input type="{{ field.field.widget.input_type }}" class="form-control" name="{{ field.name }}"
-                          id="id_{{ field.name }}" placeholder="{{ field.field.widget.attrs.placeholder }}">
+                      {% if field.field.widget.input_type == 'password' %}
+                          <div class="input-group">
+                              <input type="password" class="form-control" name="{{ field.name }}"
+                                  id="id_{{ field.name }}" placeholder="{{ field.field.widget.attrs.placeholder }}">
+                              <div class="input-group-append">
+                                  <button type="button" class="btn btn-outline-secondary" onclick="togglePassword('id_{{ field.name }}')">
+                                      <span class="oi oi-eye"></span>
+                                  </button>
+                              </div>
+                          </div>
+                      {% else %}
+                          <input type="{{ field.field.widget.input_type }}" class="form-control" name="{{ field.name }}"
+                              id="id_{{ field.name }}" placeholder="{{ field.field.widget.attrs.placeholder }}">
+                      {% endif %}
                   </div>
               </div>
           {% endfor %}
@@ -67,6 +80,15 @@
   </div>
 </section>
 
-
+<script>
+    function togglePassword(inputId) {
+        var passwordInput = document.getElementById(inputId);
+        if (passwordInput.type === "password") {
+            passwordInput.type = "text";
+        } else {
+            passwordInput.type = "password";
+        }
+    }
+</script>
 
 {% endblock %}
